# sql_create

./: README.md  main.py  pyproject.toml  test.txt
src/cvt/: main.py
