[project]
name = "sql-create"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyperclip>=1.9.0",
    "rich>=14.0.0",
    "sqlglot>=26.16.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
cvt = "cvt.main:main"
